Freedom Sanbox Ant Deploy/src/objects/Question_Bank__c.object
<CustomObject>
    <description>This will be the question bank and act as a master object to Questionnaire.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Stage__c</fullName>
        <defaultValue>&apos;Data Collection&apos;</defaultValue>
        <label>Entity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine whether the given Question Bank is to be used as a part of the Questionnaire.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProfilerQue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProfilerQue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWellness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Question Bank</label>
    <nameField>
        <displayFormat>QB-{00}</displayFormat>
        <label>Question Bank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>